# ltb-vlk

./: CMakeLists.txt  README.md
cmake/: ThirdParty.cmake
include/google/: AlmostEquals.h
include/ltb/cam/: camera_2d.hpp  camera_render_params.hpp
include/ltb/display/: mesh_display_settings_2d.hpp
include/ltb/exec/: app_defaults.hpp  app_main.hpp  update_loop.hpp
include/ltb/geom/: range.hpp  transforms.hpp
include/ltb/gui/: imgui.hpp  imgui_glfw.hpp  imgui_glfw_vulkan_setup.hpp  imgui_setup.hpp
include/ltb/utils/: comparison_utils.hpp  container_utils.hpp  file_utils.hpp  hash_utils.hpp
include/ltb/vlk/: buffer.hpp  check.hpp  command_buffer.hpp  command_pool.hpp  compute_pipeline.hpp  descriptor_set_layout.hpp  device_memory_utils.hpp  fwd.hpp  pipeline_layout.hpp  queue_types.hpp  render_pass.hpp  shader_module.hpp  vertex_description.hpp  vulkan.hpp
include/ltb/window/: glfw_update_loop.hpp  window_settings.hpp
res/shaders/: CMakeLists.txt  lines_2d.frag  lines_2d.vert  particles.comp  particles.vert  particles2.comp  particles2.frag  particles2.vert  tutorial.vert
res/shaders/lessons/: display1d.vert  lesson1.comp
src/ltb/: ltb_vlk_config.hpp.in
src/ltb/apps/: CMakeLists.txt
src/ltb/apps/api/: app.cpp  app.hpp  main.cpp
src/ltb/apps/headless/: app.cpp  app.hpp  main.cpp
src/ltb/apps/objs/: app.cpp  app.hpp  app_pipeline.cpp  app_pipeline.hpp  main.cpp
src/ltb/apps/particles/: app.cpp  app.hpp  main.cpp
src/ltb/apps/particles2/: app.cpp  app.hpp  main.cpp
src/ltb/cam/: camera_2d.cpp  camera_render_params.hpp  fwd.hpp
src/ltb/display/: display_modes.hpp  display_uniforms.hpp  mesh_display_settings.cpp  mesh_display_settings.hpp  mesh_display_settings_2.cpp
src/ltb/geom/: constants.hpp  dimensions.hpp  fwd.hpp  mesh.hpp  transforms.cpp
src/ltb/gui/: imgui_context.cpp  imgui_context.hpp  imgui_glfw.cpp  imgui_glfw_vulkan_setup.cpp  imgui_utils.cpp  imgui_utils.hpp  imgui_vulkan.cpp  imgui_vulkan.hpp
src/ltb/utils/: comparison_utils.hpp  container_utils.hpp  enum_flags.hpp  error.hpp  logging.cpp  (+11 more)
(+77 files in other folders)
